--- a/PEAnalyzer.vcxproj.filters
+++ b/PEAnalyzer.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PEFormat.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
